<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".modules.warning.activity.SW_SearchActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/sw_view_top_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="15dp"
                android:text="@string/warn_start_time"
                android:textColor="@color/tvColorOne" />

            <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:drawableRight="@drawable/sw_icon_right"
                android:gravity="right"
                android:text="@string/choose"
                android:textColor="@color/tvColorTwo" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/tvColorTwo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="15dp"
                android:text="@string/warn_end_time"
                android:textColor="@color/tvColorOne" />

            <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:drawableRight="@drawable/sw_icon_right"
                android:gravity="right"
                android:text="@string/choose"
                android:textColor="@color/tvColorTwo" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/tvColorTwo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="15dp"
                android:text="@string/warn_site"
                android:textColor="@color/tvColorOne" />

            <TextView
                android:id="@+id/tv_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:drawableRight="@drawable/sw_icon_right"
                android:ellipsize="end"
                android:gravity="right"
                android:maxLines="1"
                android:text="@string/choose"
                android:textColor="@color/tvColorTwo" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/tvColorTwo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="15dp"
                android:text="@string/warn_state"
                android:textColor="@color/tvColorOne" />

            <TextView
                android:id="@+id/tv_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:drawableRight="@drawable/sw_icon_right"
                android:gravity="right"
                android:text="@string/choose"
                android:textColor="@color/tvColorTwo" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/tvColorTwo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="15dp"
                android:text="@string/warn_reason"
                android:textColor="@color/tvColorOne" />

            <EditText
                android:id="@+id/et_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawableRight="@drawable/sw_icon_right"
                android:gravity="right"
                android:hint="@string/input"
                android:inputType="text"
                android:textColor="@color/tvColorTwo"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/tvColorTwo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <TextView
                android:maxLength="50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="15dp"
                android:text="@string/warn_card_num"
                android:textColor="@color/tvColorOne" />

            <EditText
                android:maxLength="18"
                android:id="@+id/et_card_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawableRight="@drawable/sw_icon_right"
                android:gravity="right"
                android:hint="@string/input"
                android:inputType="number"
                android:digits="0123456789x"
                android:textColor="@color/tvColorTwo"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/tvColorTwo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sure"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/border_radius_blue"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/tvBlue" />

            <TextView
                android:id="@+id/tv_reset"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/border_radius_blue"
                android:gravity="center"
                android:text="@string/reset"
                android:textColor="@color/tvColorTwo" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
