<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/cl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:paddingRight="10dp">

                <ImageView
                    android:scaleType="fitXY"
                    android:id="@+id/iv_one"
                    android:layout_width="match_parent"
                    android:layout_height="120dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sw_icon_zhuapai" />

                <ImageView
                    android:scaleType="fitXY"
                    android:id="@+id/iv_three"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_gravity="right|top"
                    />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="15dp">

                <ImageView
                    android:id="@+id/iv_two"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:scaleType="fitXY" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sw_icon_ku" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cl1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/similarity"
            android:textColor="@color/tvColorTwo" />

        <TextView
            android:id="@+id/tv_similarity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/tvRed"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll1"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/capture_time"
            android:textColor="@color/tvColorTwo" />

        <TextView
            android:id="@+id/tv_capture_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/tvColorOne" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/control_id"
            android:textColor="@color/tvColorTwo" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/tvColorOne" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll3"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/capture_site"
            android:textColor="@color/tvColorTwo" />

        <TextView
            android:id="@+id/tv_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/tvColorOne" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll4"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/pusher"
            android:textColor="@color/tvColorTwo" />

        <TextView
            android:id="@+id/tv_pusher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/tvColorOne" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll5"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/push_time"
            android:textColor="@color/tvColorTwo" />

        <TextView
            android:id="@+id/tv_push_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/tvColorOne" />
    </LinearLayout>
</RelativeLayout>