<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ll_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="1111111111111111"
            android:textColor="@color/tvColorOne" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="2"
            android:text="22222222"
            android:textColor="@color/tvColorOne" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_site"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="333333333333"
        android:textColor="@color/tvColorTwo" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/cl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_site"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/tv_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/sw_icon_details"
            android:orientation="horizontal"
            android:textColor="@color/tvColorTwo"
            >

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/sw_icon_details" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textColor="@color/tvColorTwo" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/sw_icon_location_gray"
            android:orientation="horizontal"
            android:textColor="@color/tvColorTwo"
            >

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/sw_icon_location_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/tvColorTwo" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/tv_ignore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/sw_icon_ignore"
            android:orientation="horizontal"
            android:text="忽略"
            android:textColor="@color/tvColorTwo"
            android:visibility="invisible"
            >

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/sw_icon_ignore" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ignore"
                android:textColor="@color/tvColorTwo" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/tv_dispose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="invisible"
            >

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginTop="1dp"
                android:src="@drawable/sw_icon_dispose" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dispose"
                android:textColor="@color/tvColorTwo" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/tvColorTwo" />
</LinearLayout>